# AgentStack

./: .gitguardian.yaml  .gitignore  .pre-commit-config.yaml  0.2-changes.md  CONTRIBUTING.md  MANIFEST.in  README.md  TODO.md  cli.py  install.sh  main.py  pyproject.toml  tox.ini  utils.py
.github/ISSUE_TEMPLATE/: bug_report.yaml  documentation_update.yaml  feature_request.yaml  integration_request.yaml  tool_request.yaml
.github/workflows/: codecov.yml  compile-llms-txt.yml  deploy.yml  mintlify-check.yml  mypy.yml  python-testing.yml  release-checksum.yml  version-check-on-release.yml
Formula/: agentstack.rb
agentstack/: __init__.py  agents.py  auth.py  conf.py  deploy.py  exceptions.py  graph.py  inputs.py  log.py  logger.py  main.py  packaging.py  proj_templates.py  providers.py  repo.py  run.py  tasks.py  telemetry.py  tools.py  tui.py  update.py  utils.py  yaml.py
agentstack/frameworks/templates/autogen/{{cookiecutter.project_metadata.project_slug}}/: .env.example  .gitignore  README.md  pyproject.toml
agentstack/frameworks/templates/autogen/{{cookiecutter.project_metadata.project_slug}}/src/: main.py
agentstack/frameworks/templates/langgraph/{{cookiecutter.project_metadata.project_slug}}/: README.md  pyproject.toml
agentstack/frameworks/templates/langgraph/{{cookiecutter.project_metadata.project_slug}}/src/: main.py
agentstack/templates/crewai/{{cookiecutter.project_metadata.project_slug}}/: .env.example  README.md  agentstack.json  pyproject.toml
agentstack/templates/crewai/{{cookiecutter.project_metadata.project_slug}}/src/: crew.py  main.py
agentstack/templates/crewai/{{cookiecutter.project_metadata.project_slug}}/src/tools/: __init__.py
agentstack/test/: README.md  pyproject.toml
agentstack/test/src/test/: crew.py
app/: package-lock.json  package.json
cli/: cli.py
docs/: README.md  compile_llms_txt.py  development.mdx  installation.mdx  introduction.mdx  llms.txt  mint.json  overview.md  quickstart.mdx
docs/tools/: core.mdx  (+3 more)
examples/agentql_scraper/: .env.example  LICENSE.md  README.md  agentstack.json  pyproject.toml
examples/agentql_scraper/src/: crew.py  main.py
examples/agentql_scraper/src/config/: agents.yaml  tasks.yaml
examples/agentql_scraper/src/tools/: __init__.py  agentql_tool.py
examples/claude_computer_user/: .env.example  LICENSE.md  README.md  agentstack.json  pyproject.toml
examples/claude_computer_user/src/: crew.py  main.py
examples/claude_computer_user/src/config/: agents.yaml  tasks.yaml
examples/claude_computer_user/src/tools/: __init__.py  claude_computer_use_tool.py
examples/farm_scout/: .env.example  LICENSE.md  README.md  agentstack.json  pyproject.toml
examples/farm_scout/src/: crew.py  main.py
examples/farm_scout/src/config/: agents.yaml  tasks.yaml
examples/farm_scout/src/tools/: __init__.py  dendrite_tool.py
examples/howards_agent/: .env.example  LICENSE.md  README.md  agentstack.json  pyproject.toml
examples/howards_agent/src/: crew.py  main.py
examples/howards_agent/src/config/: agents.yaml  tasks.yaml
examples/howards_agent/src/tools/: __init__.py  composio_tool.py  mem0_tool.py
examples/job_posting/: .env.example  README.md  agentstack.json  pyproject.toml
examples/job_posting/src/: crew.py  main.py
examples/job_posting/src/config/: agents.yaml  tasks.yaml
examples/job_posting/src/tools/: __init__.py
examples/sentiment_analyser/: .env.example  LICENSE.md  README.md  agentstack.json  pyproject.toml
examples/sentiment_analyser/src/: crew.py  main.py
examples/sentiment_analyser/src/config/: agents.yaml  tasks.yaml
examples/sentiment_analyser/src/tools/: __init__.py  agentql_tool.py
examples/stock_analysis/: .env.example  README.md  agentstack.json  pyproject.toml
examples/stock_analysis/src/: crew.py  main.py
examples/stock_analysis/src/config/: agents.yaml  tasks.yaml
examples/stock_analysis/src/tools/: __init__.py  perplexity_tool.py
examples/trip_planner/: .env.example  LICENSE.md  README.md  agentstack.json  itinerary.md  pyproject.toml
examples/trip_planner/src/: crew.py  main.py
examples/trip_planner/src/config/: agents.yaml  tasks.yaml
examples/trip_planner/src/tools/: __init__.py  browserbase.py
examples/web_researcher/: .env.example  README.md  agentstack.json  pyproject.toml
examples/web_researcher/src/: crew.py  main.py
examples/web_researcher/src/config/: agents.yaml  tasks.yaml
examples/web_researcher/src/tools/: __init__.py  firecrawl_tool.py  neon_tool.py
examples/web_scraper/: .env.example  pyproject.toml
examples/web_scraper/src/tools/: __init__.py  mem0_tool.py
generation/: __init__.py  agent_generation.py  gen_utils.py  task_generation.py  tool_generation.py
scripts/: test_providers.py
templates/autogen/{{cookiecutter.project_metadata.project_slug}}/: pyproject.toml
templates/crewai/{{cookiecutter.project_slug}}/: LICENSE.md  README.md  agentstack.json  pyproject.toml
templates/crewai/{{cookiecutter.project_slug}}/src/: crew.py
tests/: cli_test_utils.py  test_agents_config.py  test_cli_init.py  test_cli_loads.py  test_cli_spinner.py  test_cli_templates.py  test_cli_tools.py  test_cli_validation.py  test_compile_llms.py  test_deploy.py  test_frameworks.py  test_frameworks_langgraph.py  test_frameworks_openai_swarm.py  test_generation_agent.py  test_generation_asttools.py  test_generation_files.py  test_generation_tasks.py  test_generation_tool.py  test_inputs_config.py  test_log.py  test_pipedream_tool.py  test_preferred_models.py  test_project_run.py  test_providers.py  test_repo.py  test_tasks_config.py  test_telemetry.py  test_templates_config.py  test_tool_config.py  test_tool_generation.py  test_tool_generation_init.py  test_update.py  test_utils.py  validate_pipedream_config.py
tools/: browserbase.json
web/frontend/api/agent_web_interface/: README.md  agentstack.json  pyproject.toml
web/frontend/api/agent_web_interface/src/: crew.py  main.py
web/frontend/api/agent_web_interface/src/config/: agents.yaml  tasks.yaml
web/frontend/api/agent_web_interface/src/tools/: __init__.py  file_read_tool.py
(+389 files in other folders)
