[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentstack"
version = "0.2.1"
description = "The fastest way to build robust AI agents"
authors = [
    { name="Braelyn Boynton", email="bboynton97@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "agentops>=0.3.18",
    "typer>=0.12.5",
    "inquirer>=3.4.0",
    "art>=6.3",
    "toml>=0.10.2",
    "ruamel.yaml.base>=0.3.2",
    "cookiecutter==2.6.0",
    "psutil==5.9.8",
    "astor==0.8.1",
    "pydantic>=2.10",
    "packaging>=23.2",
    "requests>=2.32",
    "appdirs>=1.4.4"
]

[project.optional-dependencies]
test = [
    "tox>=4.23.2",
]
crewai = [
    "crewai>=0.83.0",
    "crewai-tools>=0.14.0"
]

[tool.setuptools.package-data]
agentstack = ["templates/**/*"]


[project.scripts]
agentstack = "agentstack.main:main"
