[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentstack"
version = "0.2.0"
description = "The fastest way to build robust AI agents"
authors = [
    { name="Braelyn Boynton", email="bboynton97@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "typer>=0.12.5",
    "inquirer>=3.4.0",
    "art>=6.3",
    "toml>=0.10.2",
    "ruamel.yaml.base>=0.3.2",
    "cookiecutter==2.6.0",
    "psutil==5.9.0",
    "astor==0.8.1",
    "psutil==5.9.0",
    "pydantic>=2.10",
]

[project.optional-dependencies]
test = [
    "tox>=4.23.2",
]

[tool.setuptools.package-data]
agentstack = ["templates/**/*"]


[project.scripts]
agentstack = "agentstack.main:main"

[tool.ruff]
exclude = [
    ".git",
    ".env",
    ".venv",
    "venv",
    "env",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "agentstack/templates/",
    "examples",
    "__init__.py"
]

[tool.ruff.format]
quote-style = "preserve"