[tool.poetry]
name = "farm_scout"
version = "0.1.0"
description = ""
authors = [""]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
agentops = "^0.3.12"
crewai = "^0.63.6"
crewai-tools= "0.12.1"
python-dotenv="1.0.1"
dendrite = "^0.2.7"

[project.scripts]
farm_scout = "farm_scout.main:run"
run_crew = "farm_scout.main:run"
train = "farm_scout.main:train"
replay = "farm_scout.main:replay"
test = "farm_scout.main:test"