[tool.poetry]
name = "sentiment_analyser"
version = "0.0.1"
description = "New agentstack project"
authors = ["Name <Email>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
agentstack = {extras = ["crewai"], version="0.2.2.1"}

[project.scripts]
sentiment_analyser = "sentiment_analyser.main:run"
run_crew = "sentiment_analyser.main:run"
train = "sentiment_analyser.main:train"
replay = "sentiment_analyser.main:replay"
test = "sentiment_analyser.main:test"