[tool.poetry]
name = "web_scraper"
version = "0.1.0"
description = "scrape a website and provide a description"
authors = ["me"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
agentops = "^0.3.12"
crewai = "^0.63.6"
crewai-tools= "0.12.1"
python-dotenv="1.0.1"
firecrawl-py = "^1.4.0"
mem0ai = "^0.1.29"
browserbase = "^1.0.0"

[project.scripts]
web_scraper = "web_scraper.main:run"
run_crew = "web_scraper.main:run"
train = "web_scraper.main:train"
replay = "web_scraper.main:replay"
test = "web_scraper.main:test"