[tool.poetry]
name = "{{cookiecutter.project_metadata.project_name}}"
version = "{{cookiecutter.project_metadata.version}}"
description = "{{cookiecutter.project_metadata.description}}"
authors = ["{{cookiecutter.project_metadata.author_name}}"]
license = "{{cookiecutter.project_metadata.license}}"

[tool.poetry.dependencies]
python = "^3.11"
agentops = "^0.3.12"
{%- if cookiecutter.framework == "crewai" %}
crewai = "^0.63.6"
{%- endif %}