[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}}"]
license = "{{cookiecutter.license}}"

[tool.poetry.dependencies]
python = "^3.11"
agentops = "^0.3.12"
{%- if cookiecutter.framework == "crewai" %}
crewai = "^0.63.6"
{%- endif %}