[tool.poetry]
name = "{{cookiecutter.project_metadata.project_name}}"
version = "{{cookiecutter.project_metadata.version}}"
description = "{{cookiecutter.project_metadata.description}}"
authors = ["{{cookiecutter.project_metadata.author_name}}"]
license = "{{cookiecutter.project_metadata.license}}"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
agentops = "^0.3.12"
crewai = "^0.63.6"
crewai-tools= "0.12.1"

[project.scripts]
{{cookiecutter.project_metadata.project_name}} = "{{cookiecutter.project_metadata.project_name}}.main:run"
run_crew = "{{cookiecutter.project_metadata.project_name}}.main:run"
train = "{{cookiecutter.project_metadata.project_name}}.main:train"
replay = "{{cookiecutter.project_metadata.project_name}}.main:replay"
test = "{{cookiecutter.project_metadata.project_name}}.main:test"